--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 .main-body {
-    background-color: dimgray;
+    background-color: rgb(139, 139, 139);
     font-family: Roboto;
     width: 100%;
 }
