--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/* Animation keyframes */
 @keyframes pageload {
     0% {background: #222;}
     100% {background: #66ccff;}
@@ -7,6 +8,10 @@
     0% {color: #222;}
     25% {color: purple}
     100% {color: #66ccff;}
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 .main-body {
@@ -33,23 +38,71 @@
     color: #66ccff;
 }
 
-.divider {
-    width: 75%;
-    margin: 10px;
-    box-shadow: 0px 0px 1px 0px black;
-    background-color: #222;
-    height: 2px;
+/* Navigation bar */
+.nav-box {
+    position:fixed;
+    top: 38%;
+    left: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;
 }
 
+.nav-ball {
+    height: 22px;
+    width: 22px;
+    border-radius: 11px;
+    margin: 10px;
+    background-color: #222;
+    box-shadow: inset 0px 0px 6px 1px #666;
+    cursor: pointer;
+    align-items: center;
+}
+
+.inner-nav-ball {
+    height: 16px;
+    width: 16px;
+    border-radius: 8px;
+    background-color: #66ccff00;
+    box-shadow: inset 0px 0px 3px 1px #666;
+    margin: 3px;
+    transition: background-color .5s;
+}
+
+.nav-div {
+    width: 2px;
+    height: 20px;
+    background-color: #444;
+    box-shadow: 0px 0px 3px 0px purple;
+}
+
+.tooltiptext {
+    color: rgba(34, 34, 34, 0);
+    transition: color .7s;
+    position: absolute;
+    left: 40px;
+    width: max-content;
+    font-size: 15px;
+}
+
+.nav-ball:hover .tooltiptext {
+    color: #222 !important;
+}
+
+/* Section styles */
 .sections, .section-item {
     display: flex;
     flex-direction: column;
+    min-height: auto;
 }
 
 .section-item {
     align-items: center;
     margin-right: 15%;
     margin-left: 15%;
+    justify-content: space-between;
+    min-height: 800px;
 }
 
 .section-title {
@@ -70,6 +123,15 @@
     margin: 5px;
 }
 
+.divider {
+    width: 75%;
+    margin: 10px;
+    box-shadow: 0px 0px 1px 0px black;
+    background-color: #222;
+    height: 2px;
+}
+
+/* Footer styles */
 .icon-container {
     display: flex;
     justify-content: center;
